fix horizontal scroll and edit footer

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -101,6 +101,10 @@ hr{
     color: white;
 }
 
+.content-text{
+    color: white;
+}
+
 /* responsive CSS */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.card {
